Add input forms for sign up and sign in
- Need to still create event handlers and api requests.

Co-authored-by: Franky A. <frazem60@gmail.com>

--- a/index.html
+++ b/index.html
@@ -14,7 +14,29 @@
 </head>
 
 <body>
-  <h1></h1>
+  <h1>Bucket List</h1>
+
+  <div>
+    
+      <form class="input-group" id="sign-up">
+        <fieldset>
+          <input class="credentials" name="credentials[email]" type="email" placeholder="email" required>
+          <input class="credentials" name="credentials[password]" type="password" placeholder="password" required>
+          <input class="credentials" name="credentials[password_confirmation]" type="password" placeholder="confirm password" required>
+          <input type="submit" class="btn" value="Sign Up">
+        </fieldset>
+      </form>
+
+      <form class="input-group" id="sign-in">
+        <fieldset>
+          <input class="credentials" name="credentials[email]" type="email" placeholder="email" required>
+          <input class="credentials" name="credentials[password]" type="password" placeholder="password" required>
+          <input type="submit" class="btn" value="Sign In">
+        </fieldset>
+      </form>
+
+    </div>
+
 </body>
 
 </html>
