Add form for change-pw and button for sign-out
Add event handlers to events.js
Add AJAX call to api.js
Add console logs for success/failure in ui.js
Close #10
Close #9

Co-authored-by: Shantala <mail2shantala@gmail.com>

--- a/index.html
+++ b/index.html
@@ -16,26 +16,39 @@
 <body>
   <h1>Bucket List</h1>
 
-  <div>
-    
-      <form class="input-group" id="sign-up">
-        <fieldset>
-          <input class="credentials" name="credentials[email]" type="email" placeholder="email" required>
-          <input class="credentials" name="credentials[password]" type="password" placeholder="password" required>
-          <input class="credentials" name="credentials[password_confirmation]" type="password" placeholder="confirm password" required>
-          <input type="submit" class="btn" value="Sign Up">
-        </fieldset>
-      </form>
+  <div class="signed-out">
+    <!-- Signed out -->
+    <form class="input-group" id="sign-up">
+      <fieldset>
+        <input class="credentials" name="credentials[email]" type="email" placeholder="email" required>
+        <input class="credentials" name="credentials[password]" type="password" placeholder="password" required>
+        <input class="credentials" name="credentials[password_confirmation]" type="password"
+          placeholder="confirm password" required>
+        <input type="submit" class="btn" value="Sign Up">
+      </fieldset>
+    </form>
 
-      <form class="input-group" id="sign-in">
-        <fieldset>
-          <input class="credentials" name="credentials[email]" type="email" placeholder="email" required>
-          <input class="credentials" name="credentials[password]" type="password" placeholder="password" required>
-          <input type="submit" class="btn" value="Sign In">
-        </fieldset>
-      </form>
+    <form class="input-group" id="sign-in">
+      <fieldset>
+        <input class="credentials" name="credentials[email]" type="email" placeholder="email" required>
+        <input class="credentials" name="credentials[password]" type="password" placeholder="password" required>
+        <input type="submit" class="btn" value="Sign In">
+      </fieldset>
+    </form>
 
-    </div>
+  </div>
+
+  <!-- signed in -->
+  <div class="signed-in">
+    <form class="input-group" id="change-pw">
+      <fieldset>
+        <input class="credentials" name="passwords[old]" type="text" placeholder="old password" required>
+        <input class="credentials" name="passwords[new]" type="text" placeholder="new password" required>
+        <input type="submit" class="btn" value="Change Password">
+      </fieldset>
+    </form>
+    <button id="sign-out">Sign Out</button>
+  </div>
 
 </body>
 
