--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 <body>
   <h1>Bucket List</h1>
+  <h3>What's on your bucket list?</h3>
   <!-- Signed out -->
   <div class="signed-out">
     <form class="input-group" id="sign-up">
@@ -37,7 +38,7 @@
 
   </div>
 
-  <!-- signed in -->
+  <!-- Signed in -->
   <div class="signed-in">
     <form class="input-group" id="change-pw">
       <fieldset>
@@ -47,6 +48,15 @@
       </fieldset>
     </form>
     <button id="sign-out">Sign Out</button>
+
+<!-- Create list-items -->
+    <form class="input-group" id="create-list">
+      <fieldset>
+        <input name="list[title]" type="text" placeholder="Skydiving..." required>
+        <input name="list[description]" type="text" placeholder="I want to fly!" required>
+        <input type="submit" class="btn" value="Add">
+      </fieldset>
+    </form>
   </div>
 
 </body>
