INDEX list items
- Added handlebars to show all list items
- Show list items on successful sign in
- Tested

Close #23

Co-authored-by: Franky <frazem60@gmail.com>
Co-authored-by: Shantala <mail2shantala@gmail.com>
Co-authored-by: Joe <joe10994@gmail.com>

--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
         <input type="submit" class="btn" value="Add">
       </fieldset>
     </form>
+    <div id ="bucket-list"></div>
   </div>
+  <!-- end signed in -->
 
 </body>
 
