--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+  <div class= "container">
   <h1>Bucket List</h1>
   <h3>What's on your bucket list?</h3>
   <!-- Signed out -->
@@ -60,6 +61,34 @@
     <div id ="bucket-list"></div>
   </div>
   <!-- end signed in -->
+<!-- Update list-item modal -->
+
+      
+
+        <div class="modal fade" id="update-item-modal" tabindex="-1">
+          <div class="modal-dialog" role="dialog" aria-labelledby="delete-list-modal" aria-hidden="true">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h4 class="title" id="change-password-modal-label">Change Password</h4>
+                <button type="button" class="close" data-dismiss="modal">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+
+              <div>
+                <form class="col-12 mb-2 change-password" id="change-password-forms">
+                  <fieldset>
+                    <input class="passwords" name="passwords[old]" type="password" placeholder="old password" required>
+                    <input class="passwords" name="passwords[new]" type="password" placeholder="new password" required>
+                    <input class="btn btn-outline-light" type="submit" id="change-password-modal-button" value="Change Password">
+                  </fieldset>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
 
 </body>
 
