--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Example</title>
+  <title>Bucket List</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Do not add `link` tags-->
@@ -61,11 +61,32 @@
     <div id ="bucket-list"></div>
   </div>
   <!-- end signed in -->
+
 <!-- Update list-item modal -->
-
+<div class="modal fade" id="update-item-modal" tabindex="-1">
+  <div class="modal-dialog" role="dialog" aria-labelledby="update-item-modal" aria-hidden="true">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="title">Update Item</h4>
+        <button type="button" class="close" data-dismiss="modal">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div>
+        <form class="col-12 mb-2 " id="update-item-form">
+          <fieldset>
+            <input name="list[title]" type="text" placeholder="new title" required>
+            <input name="list[description]" type="text" placeholder="new description" required>
+            <input class="btn btn-primary" type="submit" id="update-item-btn" value="Update Item">
+          </fieldset>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
       
-
-        <div class="modal fade" id="update-item-modal" tabindex="-1">
+<!-- update pw modal -->
+        <!-- <div class="modal fade" id="update-item-modal" tabindex="-1">
           <div class="modal-dialog" role="dialog" aria-labelledby="delete-list-modal" aria-hidden="true">
             <div class="modal-content">
               <div class="modal-header">
@@ -87,7 +108,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
 
 
 </body>
