--- a/index.html
+++ b/index.html
@@ -84,6 +84,20 @@
         </div>
       </div>
     </div>
+    <!-- begin notifcation /toast if data-delay is changed, must change changePasswordSuccess function -->
+    <div class="toast" style="position: fixed; top: 0; right: 0;z-index: 1; " data-delay='3750' role="alert"
+      aria-live="assertive" aria-atomic="true">
+      <div class="toast-header">
+        <strong class="mr-auto">Error!</strong>
+        <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="toast-body">
+        <!-- use js to insert text -->
+      </div>
+    </div>
+    <!-- end toast -->
 
     <!-- update pw modal -->
     <!-- <div class="modal fade" id="update-item-modal" tabindex="-1">
