--- a/index.html
+++ b/index.html
@@ -16,36 +16,14 @@
 <body>
   <div class="container">
     <!-- Signed in nav-->
-    <nav class="signed-in">
+    <nav class="signed-in navbar p-0 justify-content-between">
+      
+      <div><h3>What's on your bucket list?</h3></div>
 
-      <h3>What's on your bucket list?</h3>
-    
-      <!-- update pw modal -->
-    <div class="modal fade" id="change-password-modal" tabindex="-1">
-          <div class="modal-dialog" role="dialog" aria-labelledby="delete-list-modal" aria-hidden="true">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h4 class="title" id="change-password-modal-label">Change Password</h4>
-                <button type="button" class="close" data-dismiss="modal">
-                  <span aria-hidden="true">&times;</span>
-                </button>
-              </div>
-
-              <div>
-                <form class="input-group" id="change-pw">
-                  <fieldset>
-                  <input class="credentials" name="passwords[old]" type="text" placeholder="old password" required>
-                  <input class="credentials" name="passwords[new]" type="text" placeholder="new password" required>
-                  <input type="submit" class="btn" value="Change Password">
-                  </fieldset>
-                </form>
-              </div>
-            </div>
-          </div>
-        </div>
-      <!-- end update pw modal -->
+      <div>
         <button id="password-modal-button" data-toggle="modal" data-target="#change-password-modal">Change Password</button>
         <button id="sign-out">Sign Out</button>
+      </div>
     </nav>
 
     <!-- end signed in nav-->
@@ -127,8 +105,32 @@
       </div>
     </div>
     <!-- end toast -->
+    <!-- end update list item modal -->
+    <!-- update pw modal -->
+    <div class="modal fade" id="change-password-modal" tabindex="-1">
+      <div class="modal-dialog" role="dialog" aria-labelledby="delete-list-modal" aria-hidden="true">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h4 class="title" id="change-password-modal-label">Change Password</h4>
+            <button type="button" class="close" data-dismiss="modal">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
 
-
+          <div>
+            <form class="input-group" id="change-pw">
+              <fieldset>
+              <input class="credentials" name="passwords[old]" type="text" placeholder="old password" required>
+              <input class="credentials" name="passwords[new]" type="text" placeholder="new password" required>
+              <input type="submit" class="btn" value="Change Password">
+              </fieldset>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  <!-- end update pw modal -->
+</div>
 </body>
 
 </html>
