Add welcome message

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- Signed in nav-->
   <nav class="signed-in navbar p-0 justify-content-between">
     <div>
-      <h3>What's on your bucket list?</h3>
+      <h3>What's on your bucket list?</h3> 
     </div>
     <div>
       <button id="password-modal-button" data-toggle="modal" data-target="#change-password-modal">Change
@@ -33,6 +33,7 @@
 
   <div class="signed-in">
     <div id="bucket-list"></div>
+    <p id="message"></p>
   </div>
 
   <!-- end signed in body-->
