--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 <body>
   <!-- Signed in nav-->
   <nav class="signed-in navbar p-0 justify-content-between">
-
     <div>
       <h3>What's on your bucket list?</h3>
     </div>
@@ -26,10 +25,18 @@
       <button id="sign-out">Sign Out</button>
     </div>
   </nav>
-
   <!-- end signed in nav-->
 
   <h1>Bucket List</h1>
+
+  <!-- Signed in body -->
+
+  <div class="signed-in">
+    <div id="bucket-list"></div>
+  </div>
+
+  <!-- end signed in body-->
+
 
   <!-- Signed out -->
   <div class="signed-out">
@@ -52,22 +59,31 @@
       </fieldset>
     </form>
   </div>
+  <!-- end signed-out  -->
 
-  <!-- Signed in body -->
-
-  <!-- Create list-items -->
-  <div class="signed-in">
-    <form class="input-group" id="create-list">
-      <fieldset>
-        <input name="list[title]" type="text" placeholder="Skydiving..." required>
-        <input name="list[description]" type="text" placeholder="I want to fly!" required>
-        <input type="submit" class="btn" value="Add">
-      </fieldset>
-    </form>
-    <div id="bucket-list"></div>
+  <!-- create-item modal -->
+  <div class="modal fade" id="create-item-modal" tabindex="-1">
+    <div class="modal-dialog" role="dialog" aria-labelledby="create-item-modal" aria-hidden="true">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="title">Create an item</h4>
+          <button type="button" class="close" data-dismiss="modal">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div>
+          <form class="input-group" id="create-list">
+            <fieldset>
+              <input name="list[title]" type="text" placeholder="Skydiving..." required>
+              <input name="list[description]" type="text" placeholder="I want to fly!" required>
+              <input type="submit" class="btn" value="Add">
+            </fieldset>
+          </form>
+        </div>
+      </div>
+    </div>
   </div>
-
-  <!-- end signed in body-->
+  <!-- end create-item modal -->
 
   <!-- Update list-item modal -->
   <div class="modal fade" id="update-item-modal" tabindex="-1">
@@ -93,11 +109,13 @@
   </div>
   <!-- end update list item modal -->
 
-  <!-- begin notifcation /toast if data-delay is changed-->
+  <!-- begin notification /toast-->
   <div class="toast" style="position: fixed; top: 0; right: 0;z-index: 1; " data-delay='3750' role="alert"
     aria-live="assertive" aria-atomic="true">
     <div class="toast-header">
-      <strong class="mr-auto">Error!</strong>
+      <strong class="mr-auto">
+        <!-- use js to insert text -->
+      </strong>
       <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
         <span aria-hidden="true">&times;</span>
       </button>
