Populate the update modal with the current items value
Close #28

--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
         <div>
           <form class="col-12 mb-2 " id="update-item-form">
             <fieldset>
-              <input name="list[title]" type="text" placeholder="new title" required>
-              <input name="list[description]" type="text" placeholder="new description" required>
+              <input name="list[title]" id="update-title" type="text" placeholder="new title" required>
+              <input name="list[description]" id="update-description" type="text" placeholder="new description" required>
               <input class="btn btn-primary" type="submit" id="update-item-btn" value="Update Item">
             </fieldset>
           </form>
