--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- Signed in nav-->
   <nav class="signed-in navbar p-0 justify-content-between">
     <div>
-      <h3>What's on your bucket list?</h3> 
+      <!-- <h3>Welcome,please make your bucket list</h3>  -->
     </div>
     <div>
       <button id="password-modal-button" data-toggle="modal" data-target="#change-password-modal">Change
