--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
   <!-- Signed out -->
   <div class="signed-out">
-    <h1 class="text-center text-md-left ml-md-2">What's on you're bucket list?</h1>
+    <h1 class="text-center text-md-left ml-md-2">What's on your bucket list?</h1>
     <div class="container ml-md-2">
     <div class="row text-center text-md-left">
     <form class="input-group" id="sign-up">
